kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  selector:
    app: service1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: service2-service
spec:
  selector:
    app: service2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
